--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ navigationFragment = "2.7.7"
 legacySupportV4 = "1.0.0"
 lifecycleLivedataKtx = "2.7.0"
 lifecycleViewmodelKtx = "2.7.0"
+navigationFragmentVersion = "1.7"
 roomCommon = "2.6.1"
 roomCompilerVersion = "2.5.0"
 roomRuntime = "2.6.1"
@@ -35,6 +36,8 @@ navigation-fragment = { group = "androidx.navigation", name = "navigation-fragme
 legacy-support-v4 = { group = "androidx.legacy", name = "legacy-support-v4", version.ref = "legacySupportV4" }
 lifecycle-livedata-ktx = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycleLivedataKtx" }
 lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
+navigation-fragment-v17 = { module = "androidx.navigation:navigation-fragment", version.ref = "navigationFragmentVersion" }
+navigation-ui = { module = "androidx.navigation:navigation-ui", version.ref = "navigationFragmentVersion" }
 room-common = { group = "androidx.room", name = "room-common", version.ref = "roomCommon" }
 room-compiler-v250 = { module = "androidx.room:room-compiler", version.ref = "roomCompilerVersion" }
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "roomRuntime" }
