Completer filter. Change medicine features.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Pharmacy"
         tools:targetApi="31">
+        <!--TODO-->
         <activity
             android:name=".MainActivity"
             android:exported="true"
+            android:screenOrientation="portrait"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
