--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.3.1"
+coreSplashscreen = "1.0.1"
 firebaseBom = "33.0.0"
 gson = "2.10.1"
 junit = "4.13.2"
@@ -28,6 +29,7 @@ firebaseFirestore = "25.0.0"
 composePreviewRenderer = "0.0.1-alpha01"
 
 [libraries]
+core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
 firebase-auth = { module = "com.google.firebase:firebase-auth" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
